# Ganapathi-Mentor-AI

./: .env.example  .env.integrations.example  .gitignore  API_PRICING.md  DEPLOYMENT.md  README.md  SETUP_CHECKLIST.md  SPECS.md  build_log.txt  clean_errors.txt  create_pr.ps1  eslint.config.mjs  final_lint_check.json  final_source_bugs.txt  lint_out.txt  lint_results.txt  middleware.ts  middleware.ts.disabled  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  real_bugs.json  real_bugs.txt  real_bugs2.txt  setup-ganapathi.bat  source_bugs.txt  src_lint_output.txt  tailwind.config.ts  test-base44-ai.ts  test-freepik.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
components/: ChatPanel.tsx
docs/: VIDEO_GENERATION_SETUP.md
ganapathi-core/: CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
ganapathi-core/ganapathi/: __init__.py  __main__.py  ai.py  ai_agent.py  ai_engine.py  audit.py  cli.py  config.py  console_renderer.py  devops.py  doctor.py  explain.py  hive_mind.py  ml_predictor.py
ganapathi-core/ganapathi_mentor_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ganapathi-mentor-cli/: README.md  package-lock.json  package.json  tsconfig.json
hooks/: useAuth.tsx  useParticleCanvas.ts  useScrollProgress.ts  useSession.ts
lib/: ai.ts  aiml.ts  auth.ts  base44.ts  client-db.ts  content-store.ts  demo-store.ts  encryption.ts  execution-wrapper.ts  freepik.ts  github.ts  heygen.ts  huggingface.ts  metrics.ts  mongodb.ts  mongoose.ts  murf.ts  picsart.ts  quota.ts  rateLimit.ts  serp.ts  server-auth.ts  suno.ts  video-generation.ts  youtube.ts
models/: Alert.ts  Anomaly.ts  Challenge.ts  CodeReview.ts  Concept.ts  Discussion.ts  Documentation.ts  Feedback.ts  Interview.ts  LearningPath.ts  MediaProject.ts  Metric.ts  Question.ts  ResearchCollection.ts  ResearchHistory.ts  ResearchItem.ts  Room.ts  Session.ts  Submission.ts  Team.ts  TeamMember.ts  User.ts  UserContent.ts  UserIntegration.ts
playwright-report/: index.html
scripts/: backfill-stats.ts  bin.js  check-db.js  check-users.ts  final-migrate.js  fix-user-metrics.ts  ganapathi.ts  init-database.sql  migrate-supabase-to-mongo.js  migrate.js  seed-data.sql  test-db.ts  test-hf.ts  test-integrations.ts  test-mongo.js  test-submission.ts  test-wandbox.ts  verify-ai-keys.mjs  wiki_service.py
styles/: globals.css
(+312 files in other folders)
