[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ganapathi-mentor-ai"
version = "2.0.0"
description = "Ganapathi CLI v2.0 — Ultimate AI Terminal Mentor with ML Predictions, Multi-LLM, DevOps, and Autonomous Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "G R Harsha", email = "grharsha@example.com"},
]
keywords = [
    "ai", "mentor", "cli", "ml", "code-analysis", "devops",
    "docker", "kubernetes", "llm", "terminal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "websockets>=12.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
full = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "shap>=0.43.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ganapathi = "ganapathi.cli:main"

[project.urls]
Homepage = "https://github.com/grharsha/ganapathi-cli"
Repository = "https://github.com/grharsha/ganapathi-cli"
Documentation = "https://github.com/grharsha/ganapathi-cli#readme"
"Bug Tracker" = "https://github.com/grharsha/ganapathi-cli/issues"

[tool.setuptools.packages.find]
include = ["ganapathi*"]

[tool.setuptools.package-data]
ganapathi = ["py.typed"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
